Fix broken styles and improve responsiveness

--- a/src/public/assets/css/confirmation.css
+++ b/src/public/assets/css/confirmation.css
@@ -1,49 +1,137 @@
 body {
-    margin: 0;
-    font-family: lato;
-
+  margin: 0;
+  font-family: lato;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-header {
+.container-menu {
+  height: 70px;
+  background-color: #73a942;
+  padding: 0, 20px;
+}
+
+.menu a {
+  text-decoration: none;
+}
+
+.menu {
+  max-width: 1200px;
+  margin: auto;
+  height: 100%;
+}
+
+nav {
+  height: 100%;
+}
+
+nav ul {
+  height: 100%;
+  display: flex;
+}
+
+nav > ul > li {
+  list-style: none;
+  height: 100%;
+}
+
+nav > ul > li a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  color: #fff;
+  align-items: center;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+nav > ul > li a:hover {
+  transform: scale(1.1);
+  background-color: #aad576;
+}
+
+.check {
+  width: 10%;
+}
+
+.center-padding {
+  text-align: center;
+  padding: 50px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.center-padding a {
+  text-decoration: none;
+  color: black;
+}
+
+.center-padding a:hover {
+  color: #aad576;
+}
+
+@media (max-width: 767px) {
+  .check {
+    width: 30%;
+  }
+
+  .center-padding {
+    text-align: center;
+    padding: 50px;
+  }
+
+  .center-padding a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .center-padding a:hover {
+    color: #aad576;
+  }
+
+  header {
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #73A942;
+    background-color: #73a942;
+  }
 
-}
-
-.container-menu {
+  .container-menu {
     height: 70px;
-    background-color: #73A942;
+    background-color: #73a942;
     padding: 0, 20px;
-}
+  }
 
-.menu a {
+  .menu a {
     text-decoration: none;
-}
+  }
 
-.menu {
+  .menu {
     max-width: 1200px;
     margin: auto;
     height: 100%;
-}
+  }
 
-nav {
+  nav {
     height: 100%;
-}
+  }
 
-nav ul {
+  nav ul {
     height: 100%;
     display: flex;
-}
+  }
 
-nav>ul>li {
+  nav > ul > li {
     list-style: none;
     height: 100%;
-}
+  }
 
-nav>ul>li a {
+  nav > ul > li a {
     width: 100%;
     height: 100%;
     display: flex;
@@ -51,107 +139,16 @@ nav>ul>li a {
     align-items: center;
     padding-left: 25px;
     padding-right: 25px;
-}
+  }
 
-nav>ul>li a:hover {
+  nav > ul > li a:hover {
     transform: scale(1.1);
     background-color: #aad576;
-
+  }
 }
 
-.check {
-    width: 10%;
-
-}
-
-.center-padding {
-    text-align: center;
-    padding: 50px;
-}
-
-.center-padding a {
-    text-decoration: none;
-    color: black;
-}
-
-.center-padding a:hover {
-    color: #aad576;
-}
-
-@media(max-width: 767px) {
-    .check {
-        width: 30%;
-
-    }
-
-    .center-padding {
-        text-align: center;
-        padding: 50px;
-    }
-
-    .center-padding a {
-        text-decoration: none;
-        color: black;
-    }
-
-    .center-padding a:hover {
-        color: #aad576;
-    }
-
-    header {
-        width: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: #73A942;
-
-    }
-
-    .container-menu {
-        height: 70px;
-        background-color: #73A942;
-        padding: 0, 20px;
-    }
-
-    .menu a {
-        text-decoration: none;
-    }
-
-    .menu {
-        max-width: 1200px;
-        margin: auto;
-        height: 100%;
-    }
-
-    nav {
-        height: 100%;
-    }
-
-    nav ul {
-        height: 100%;
-        display: flex;
-    }
-
-    nav>ul>li {
-        list-style: none;
-        height: 100%;
-    }
-
-    nav>ul>li a {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        color: #fff;
-        align-items: center;
-        padding-left: 25px;
-        padding-right: 25px;
-    }
-
-    nav>ul>li a:hover {
-        transform: scale(1.1);
-        background-color: #aad576;
-
-    }
-
-
+@media (max-width: 540px) {
+  h1 {
+    font-size: 1.2rem;
+  }
 }
