--- a/src/public/assets/css/login.css
+++ b/src/public/assets/css/login.css
@@ -33,61 +33,6 @@ header {
   color: #fff;
   user-select: none;
 }
-.navigation a {
-  position: relative;
-  font-size: 1.1em;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 500;
-  margin-left: 40px;
-}
-
-/*Efectos menu*/
-.navigation a::after {
-  /*content es la linea*/
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -6px;
-  width: 100%;
-  height: 3px;
-  background: #fff;
-  border-radius: 5px;
-  /*transform cambia de tamaño en el eje X(horinzontal)*/
-  transform: scaleX(0);
-  transition: 0.5s;
-}
-/*Efecto menu cambia por el hover sobre el after en el eje X*/
-.navigation a:hover::after {
-  transform: scaleX(1);
-}
-/*Formato del boton*/
-.navigation .btnLogin-popup {
-  width: 130px;
-  height: 50px;
-  background: transparent;
-  border: 2px solid #fff;
-  outline: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 1.1em;
-  color: #fff;
-  font-weight: 500;
-  margin-left: 40px;
-  transition: 0.5s;
-}
-/*Estilo del efecto del boton por el hover*/
-.navigation .btnLogin-popup:hover {
-  background: #fff;
-  color: #000000;
-}
-header {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #73a942;
-}
 
 .footer {
   margin-top: 0;
