--- a/src/public/assets/css/user-businesses.css
+++ b/src/public/assets/css/user-businesses.css
@@ -101,3 +101,9 @@ main {
   width: 3rem;
   height: 3rem;
 }
+
+@media (max-width: 767px) {
+  .title-container h1 {
+    font-size: 1.4rem;
+  }
+}
